8193518: C2: Vector registers sometimes corrupted at safepoint

Reviewed-by: neliasso, thartmann, kvn